--- a/en_us.lang
+++ b/en_us.lang
@@ -220,7 +220,7 @@ enchant.creature_enchant.speed=Speed
 enchant.creature_enchant.spider=Spider Limbs
 enchant.creature_enchant.vitality=Vitality
 enchant.creature_enchant.health_boost=Health Boost
-enchant.creature_enchant.agiltiy=Agility
+enchant.creature_enchant.agility=Agility
 enchant.creature_enchant.haste=Haste
 enchant.creature_enchant.productivity=Productivity
 
