--- a/hu-hu.lang
+++ b/hu-hu.lang
@@ -220,7 +220,7 @@ enchant.creature_enchant.speed=Gyorsaság
 enchant.creature_enchant.spider=Pók Lábak
 enchant.creature_enchant.vitality=Életerő
 enchant.creature_enchant.health_boost=Health Boost
-enchant.creature_enchant.agiltiy=Mozgékonyság
+enchant.creature_enchant.agility=Mozgékonyság
 enchant.creature_enchant.haste=Haste
 enchant.creature_enchant.productivity=Termelékenység
 
