--- a/hu-hu.lang
+++ b/hu-hu.lang
@@ -314,8 +314,17 @@ tile.thaumic_arcana.taint_wine_trunk.name=Taint Wine Trunk
 tile.thaumic_arcana.paving_stone_enable_enchants.name=Paving Stone of Binding Empowerment
 tile.thaumic_arcana.paving_stone_disable_enchants.name=Paving Stone of Binding Disempowerment
 
+# #### #
+# Foci #
+# #### #
+thaumic_arcana.enable_creature_enchants.name=Empowerment
+thaumic_arcana.enable_creature_enchants.text=Gives the property of be enchanted to any creature.
+
+thaumic_arcana.disable_creature_enchants.name=Disempowerment
+thaumic_arcana.disable_creature_enchants.text=Any creature affected become unable to be enchanted.
+
 # ######### #
-# MATERIALS #
+# Materials #
 # ######### #
 golem.material.thaumic_arcana.hay=Szalma
 golem.material.thaumic_arcana.flesh=Flesh
@@ -349,7 +358,7 @@ commands.thaumic_arcana.scar.wrong_target= Target can not be scarred!
 # Research #
 # ######## #
 thaumic_arcana.research.focused_on=Focusing on:
-thaumic_arcana.research.values=Possible results:
+thaumic_arcana.research.values=Possible results: 
 thaumic_arcana.research.expected_result=Expected_result
 thaumic_arcana.research.counts_in_as=%s% of the result will be considered
 
@@ -358,4 +367,4 @@ thaumic_arcana.research.counts_in_as=%s% of the result will be considered
 # #### #
 thaumic_arcana.tooltip.unused=Unused!
 thaumic_arcana.tooltip.infused_with=Infused with %s
-item.plant_ball.contains=Tartalmaz:
+item.plant_ball.contains=Tartalmaz: 
