--- a/en_us.lang
+++ b/en_us.lang
@@ -314,8 +314,17 @@ tile.thaumic_arcana.taint_wine_trunk.name=Taint Wine Trunk
 tile.thaumic_arcana.paving_stone_enable_enchants.name=Paving Stone of Binding Empowerment
 tile.thaumic_arcana.paving_stone_disable_enchants.name=Paving Stone of Binding Disempowerment
 
+# #### #
+# Foci #
+# #### #
+thaumic_arcana.enable_creature_enchants.name=Empowerment
+thaumic_arcana.enable_creature_enchants.text=Gives the property of be enchanted to any creature.
+
+thaumic_arcana.disable_creature_enchants.name=Disempowerment
+thaumic_arcana.disable_creature_enchants.text=Any creature affected become unable to be enchanted.
+
 # ######### #
-# MATERIALS #
+# Materials #
 # ######### #
 golem.material.thaumic_arcana.hay=Straw
 golem.material.thaumic_arcana.flesh=Flesh
